--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="repeat_password">Repeat Password</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
+    <string name="apply">Apply</string>
+    <string name="back">Back</string>
+    <string name="create_new_note">Create new Note</string>
 </resources>
